--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,31 +31,57 @@
     <div class="col-md-10 col-12 mx-auto">
       <div class="row row-cols-sm-3">
         {{#each restaurants}}
-          <a href="/restaurants/{{this.id}}" class="text-secondary">
-            <div class="card mb-3">
-              <img
-                class="card-img-top"
-                src="{{this.image}}"
-                alt="{{this.name}}"
-              />
-              <div class="card-body p-3">
-                <h6 class="card-title mb-1">{{this.name}}</h6>
+          <div class="each-card-container" style="margin-bottom: 20px;">
+            <a href="/restaurants/{{this._id}}" class="text-secondary">
+              <div class="card mb-3">
+                <img
+                  class="card-img-top"
+                  src="{{this.image}}"
+                  alt="{{this.name}}"
+                />
+                <div class="card-body p-3">
+                  <h6 class="card-title mb-1">{{this.name}}</h6>
 
-                <div class="restaurant-category mb-1">
-                  <i class="fas fa-utensils pr-2"></i>
-                  {{this.category}}
+                  <div class="restaurant-category mb-1">
+                    <i class="fas fa-utensils pr-2"></i>
+                    {{this.category}}
+                  </div>
+
+                  <span
+                    class="badge badge-pill badge-danger font-weight-normal"
+                  >
+                    {{this.rating}}
+                    <i class="fas fa-star fa-xs"></i>
+                  </span>
+
                 </div>
-
-                <span class="badge badge-pill badge-danger font-weight-normal">
-                  {{this.rating}}
-                  <i class="fas fa-star fa-xs"></i>
-                </span>
-
               </div>
+            </a>
+            <div
+              class="user-function"
+              style="margin-left:50%; margin-bottom:5px;"
+            >
+              <a href="/restaurants/{{this._id}}">detail</a>
+              <a href="./todos/{{this._id}}/edit">edit</a>
+              <form
+                action="./todos/{{this._id}}/delete"
+                method="POST"
+                style="display: inline;"
+              >
+                <button type="submit">delete</button>
+              </form>
             </div>
-          </a>
+          </div>
+
         {{/each}}
       </div>
     </div>
   </div>
+</div>
+
+<div class="create-btn">
+  <a
+    href="./restaurants/new"
+    style="text-decoration:none; color:white; font-size:large"
+  >+</a>
 </div>
