--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -96,3 +96,22 @@ header {
     height: auto;
   }
 }
+.create-btn {
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  margin-left: -25px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  background: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 50%;
+  box-shadow: 1px 1px 5px 0px #666;
+  cursor: pointer;
+}
+.create-btn:hover {
+  transform: translateY(-5px);
+  transition-duration: 0.3s;
+}
