--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,11 +7,11 @@
         <div class="input-group">
           <input
             type="text"
-            name="keyword"
+            name="keywords"
             class="form-control"
             placeholder="輸入餐廳、分類"
             aria-label="Restaurant Name..."
-            value=""
+            value="{{keywords}}"
             aria-describedby="search-button"
           />
           <div class="input-group-append">
@@ -30,32 +30,59 @@
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
       <div class="row row-cols-sm-3">
-        {{#each restaurants}}
-          <a href="/restaurants/{{this.id}}" class="text-secondary">
-            <div class="card mb-3">
-              <img
-                class="card-img-top"
-                src="{{this.image}}"
-                alt="{{this.name}}"
-              />
-              <div class="card-body p-3">
-                <h6 class="card-title mb-1">{{this.name}}</h6>
+        {{#each restaurantData}}
+          {{! this.id 會 error; 請使用 this._id }}
+          <div class="rest-card-container">
+            <a href="/restaurants/{{this._id}}" class="text-secondary">
+              <div class="card mb-3">
+                <img
+                  class="card-img-top"
+                  src="{{this.image}}"
+                  alt="{{this.name}}"
+                />
+                <div class="card-body p-3">
+                  <h6 class="card-title mb-1">{{this.name}}</h6>
 
-                <div class="restaurant-category mb-1">
-                  <i class="fas fa-utensils pr-2"></i>
-                  {{this.category}}
+                  <div class="restaurant-category mb-1">
+                    <i class="fas fa-utensils pr-2"></i>
+                    {{this.category}}
+                  </div>
+
+                  <span
+                    class="badge badge-pill badge-danger font-weight-normal"
+                  >
+                    {{this.rating}}
+                    <i class="fas fa-star fa-xs"></i>
+                  </span>
+
                 </div>
-
-                <span class="badge badge-pill badge-danger font-weight-normal">
-                  {{this.rating}}
-                  <i class="fas fa-star fa-xs"></i>
-                </span>
-
               </div>
+            </a>
+            <div class="card-footer d-flex justify-content-end flex-wrap">
+              <a href="/restaurants/{{this._id}}/edit"><button
+                  class="btn btn-link btn-sm"
+                >Edit</button></a>
+              <a href="/restaurants/{{this._id}}"><button
+                  class="btn btn-link btn-sm"
+                >Details</button></a>
+              <form action="./restaurants/{{this._id}}/delete" method="POST">
+                <button
+                  type="submit"
+                  class="btn btn-danger btn-sm text-white"
+                >delete</button>
+              </form>
             </div>
-          </a>
+          </div>
+
         {{/each}}
       </div>
     </div>
   </div>
+</div>
+
+<div class="create-btn">
+  <a
+    href="/restaurants/new"
+    style="text-decoration:none; font-size:large; color:white"
+  >+</a>
 </div>
