--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,7 +41,10 @@
     {{! /javascripts 前面不可以添加斜槓/public }}
     <script src="/javascripts/popper.js"></script>
     <script src="/javascripts/bootstrap.bundle.js"></script>
-
+    <script
+      src="https://kit.fontawesome.com/93809ca2de.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 
 </html>
