--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -33,6 +33,13 @@
         </span>
         {{restaurants.phone}}
       </p>
+      <p class="mb-1">
+        <span class="text-secondary">
+          <i class="fas fa-thin fa-star pr-2"></i>
+          評價：
+        </span>
+        {{restaurants.rating}}
+      </p>
 
       <p class="mb-5">
         {{restaurants.description}}
