--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 <div class="container search-bar">
   <div class="search-bar-outer">
     <div class="search-bar-inner">
-      <form action="/search">
+      {{!-- <form action="/search">
         <h4 class="mb-2">尋找餐廳：</h4>
         <div class="input-group">
           <input
@@ -19,12 +19,57 @@
                 class="fas fa-search"
               ></i></button>
           </div>
+          <div class="input-group">
+            <select class="form-select" id="sort" name="sort">
+              <option>A > Z</option>
+              <option>Z > A</option>
+              <option>類別</option>
+              <option>地區</option>
+            </select>
+          </div>
+        </div>
+      </form> --}}
+      <form action="/search" style="display: inline-block;">
+        <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2">
+          <div class="input-group mb-2 mb-sm-0 mr-sm-2">
+            <input
+              type="text"
+              name="keywords"
+              class="form-control"
+              placeholder="輸入餐廳、分類"
+              aria-label="Restaurant Name..."
+              aria-describedby="button-addon2"
+              value="{{keywords}}"
+            />
+            <button class="btn btn-major" type="submit" id="search-button"><i
+                class="fas fa-search"
+              ></i></button>
+          </div>
+          <div class="sort-group">
+            <select class="form-select" id="sort-select" name="sort">
+              <option value="useless">尚未優化完畢</option>
+              <option value="alphabetAsc">A > Z</option>
+              <option value="alphabetDesc">Z > A</option>
+              <option value="category">類別</option>
+              <option value="location">地區</option>
+            </select>
+          </div>
         </div>
       </form>
+      {{! <form action="/orderselect" style="display: inline-block;">
+        
+      </form> }}
+
     </div>
   </div>
 </div>
+{{! <script>
+  const sortSelect = document.getElementById('sort-select')
+  selectElement.addEventListener('click', (event) => { const sortType =
+  event.target.value; console.log(sortType); window.location.href =
+  `/sort?order=${sortType}`; });
 
+</script> }}
 <!-- restaurant list -->
 <div class="container mt-5">
   <div class="row">
@@ -85,12 +130,7 @@
 
 <div class="create-btn">
   <a
-<<<<<<< HEAD
     href="/restaurants/new"
     style="text-decoration:none; font-size:large; color:white"
-=======
-    href="./restaurants/new"
-    style="text-decoration:none; color:white; font-size:large"
->>>>>>> 31c0196334c3dc9e9fb6e3a52bab00083b6e5c1b
   >+</a>
 </div>
