--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant List</title>
     {{! /stylesheets 前面不可以添加斜槓/public }}
-    <link rel="stylesheet" href="/stylesheets/bootstrap.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css
+"
+    />
     <link rel="stylesheet" href="/stylesheets/global.css" />
     <link
       rel="stylesheet"
@@ -40,7 +44,9 @@
 
     {{! /javascripts 前面不可以添加斜槓/public }}
     <script src="/javascripts/popper.js"></script>
-    <script src="/javascripts/bootstrap.bundle.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    ></script>
     <script
       src="https://kit.fontawesome.com/93809ca2de.js"
       crossorigin="anonymous"
