--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -11,6 +11,7 @@
         id="name"
         placeholder="Alpha 科技餐廳"
         name="name"
+        maxlength="50"
         required
       />
     </div>
@@ -24,6 +25,7 @@
         id="name_en"
         placeholder="Alpha Tech Theme Restaurant"
         name="name_en"
+        maxlength="50"
         required
       />
     </div>
@@ -38,6 +40,7 @@
         placeholder="美式"
         list="categoryOptions"
         name="category"
+        maxlength="50"
         required
       />
       {{! 使用datalist，讓使用者可選擇或自行輸入 }}
@@ -54,7 +57,15 @@
       <label for="image" class="form-label">圖片連結<span
           class="text-danger"
         >*</span></label>
-      <input type="url" class="form-control" id="image" name="image" required />
+      <input
+        type="url"
+        class="form-control"
+        id="image"
+        name="image"
+        pattern="https?://.+"
+        maxlength="50"
+        required
+      />
     </div>
     <div class="mb-3">
       <label for="location" class="form-label">地址<span
@@ -66,6 +77,7 @@
         id="location"
         placeholder="台中市北屯區迷有這條路520號"
         name="location"
+        maxlength="70"
         required
       />
     </div>
@@ -79,6 +91,8 @@
         id="phone"
         placeholder="04-23456789"
         name="phone"
+        pattern="[0-9]*"
+        maxlength="10"
         required
       />
     </div>
@@ -91,6 +105,8 @@
         class="form-control"
         id="google_map"
         name="google_map"
+        pattern="https?://.+"
+        maxlength="50"
         required
       />
     </div>
@@ -118,6 +134,7 @@
         id="description"
         rows="3"
         name="description"
+        maxlength="1000"
         required
       ></textarea>
     </div>
